@@ -6,8 +6,9 @@
 ; general section
 
 [general]
-nationalprefix=0
-internationalprefix=00
+nationalprefix=0        ; or for example "+49"
+internationalprefix=00  ; or for example "+"
+;subscriberprefix=+4969 ; prefix including area code (some lines need this)
 rxgain=1.0       ;linear receive gain (1.0 = no change)
 txgain=1.0       ;linear transmit gain (1.0 = no change)
 language=de      ;set default language
