@@ -4,6 +4,8 @@ CHANGES
 HEAD
 ------------------
 - added config setting 'faxdetecttime' to limit the fax detection for a given amount of seconds.
+- added config option for subscriber prefix. Some lines may show local calls without area code
+  signaled as subscriber-number. Here the complete prefix including area code must be added.
 
 
 chan_capi-1.1.1
